[package]
name = "alloy-throttle"
version = "0.1.1"
edition = "2021"

[dependencies]
alloy-json-rpc = "0.12"
alloy-transport = "0.12"
governor = "0.8"
tower = "0.5"
thiserror = "2"


[dev-dependencies]
tokio = { version = "1.42", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
alloy = { version = "0.12", features = ["provider-ws"] }
eyre = "0.6"
